transform works sort of

--- a/KanskeKul3DSpel/KanskeKul3DSpel.vcxproj.filters
+++ b/KanskeKul3DSpel/KanskeKul3DSpel.vcxproj.filters
@@ -54,6 +54,12 @@
     <ClCompile Include="Src\Component\EntityManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Src\Component\TransformComp.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Src\UnorderedErase.h">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Src\Shader.h">
