--- a/KanskeKul3DSpel/KanskeKul3DSpel.vcxproj
+++ b/KanskeKul3DSpel/KanskeKul3DSpel.vcxproj
@@ -154,10 +154,12 @@
     <ClCompile Include="..\External\Include\Imgui\misc\cpp\imgui_stdlib.cpp" />
     <ClCompile Include="Src\Camera.cpp" />
     <ClCompile Include="Src\Component\EntityManager.cpp" />
+    <ClCompile Include="Src\Component\TransformComp.cpp" />
     <ClCompile Include="Src\ConsoleWindow.cpp" />
     <ClCompile Include="Src\Game.cpp" />
     <ClCompile Include="Src\Main.cpp" />
     <ClCompile Include="Src\Shader.cpp" />
+    <ClCompile Include="Src\UnorderedErase.h" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Src\Camera.h" />
