--- a/KanskeKul3DSpel/imgui.ini
+++ b/KanskeKul3DSpel/imgui.ini
@@ -9,7 +9,7 @@ Size=345,180
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=937,81
+Pos=1444,74
 Size=550,680
 Collapsed=0
 
@@ -19,7 +19,17 @@ Size=198,71
 Collapsed=0
 
 [Window][Turbosole]
-Pos=1261,86
+Pos=1375,220
 Size=500,600
+Collapsed=0
+
+[Window][Camera debug window!]
+Pos=60,60
+Size=275,156
+Collapsed=0
+
+[Window][Entity debugger]
+Pos=87,12
+Size=484,327
 Collapsed=0
 
