--- a/KanskeKul3DSpel/KanskeKul3DSpel.vcxproj
+++ b/KanskeKul3DSpel/KanskeKul3DSpel.vcxproj
@@ -154,22 +154,28 @@
     <ClCompile Include="..\External\Include\Imgui\misc\cpp\imgui_stdlib.cpp" />
     <ClCompile Include="Src\Camera.cpp" />
     <ClCompile Include="Src\Component\EntityManager.cpp" />
+    <ClCompile Include="Src\Component\ModelComp.cpp" />
     <ClCompile Include="Src\Component\TransformComp.cpp" />
     <ClCompile Include="Src\ConsoleWindow.cpp" />
     <ClCompile Include="Src\Game.cpp" />
     <ClCompile Include="Src\Main.cpp" />
+    <ClCompile Include="Src\Renderer.cpp" />
     <ClCompile Include="Src\Shader.cpp" />
     <ClCompile Include="Src\UnorderedErase.h" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Src\Camera.h" />
+    <ClInclude Include="Src\Component\Cube.h" />
+    <ClInclude Include="Src\Component\DataTemplate.h" />
     <ClInclude Include="Src\Component\EntityManager.h" />
+    <ClInclude Include="Src\Component\ModelComp.h" />
     <ClInclude Include="Src\Component\TransformComp.h" />
     <ClInclude Include="Src\ConsoleWindow.h" />
     <ClInclude Include="Src\Component\Entity.h" />
     <ClInclude Include="Src\Game.h" />
     <ClInclude Include="Src\ImguiInit.h" />
     <ClInclude Include="Src\Player.h" />
+    <ClInclude Include="Src\Renderer.h" />
     <ClInclude Include="Src\Shader.h" />
   </ItemGroup>
   <ItemGroup>
