--- a/KanskeKul3DSpel/KanskeKul3DSpel.vcxproj.filters
+++ b/KanskeKul3DSpel/KanskeKul3DSpel.vcxproj.filters
@@ -60,6 +60,12 @@
     <ClCompile Include="Src\UnorderedErase.h">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Src\Component\ModelComp.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Src\Renderer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Src\Shader.h">
@@ -87,6 +93,18 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Src\Component\Entity.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\Component\ModelComp.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\Component\DataTemplate.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\Renderer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\Component\Cube.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
