--- a/KanskeKul3DSpel/KanskeKul3DSpel.vcxproj
+++ b/KanskeKul3DSpel/KanskeKul3DSpel.vcxproj
@@ -154,6 +154,7 @@
     <ClCompile Include="..\External\Include\Imgui\misc\cpp\imgui_stdlib.cpp" />
     <ClCompile Include="Src\Camera.cpp" />
     <ClCompile Include="Src\Component\EntityManager.cpp" />
+    <ClCompile Include="Src\Component\LightComp.cpp" />
     <ClCompile Include="Src\Component\ModelComp.cpp" />
     <ClCompile Include="Src\Component\TransformComp.cpp" />
     <ClCompile Include="Src\ConsoleWindow.cpp" />
@@ -168,6 +169,7 @@
     <ClInclude Include="Src\Component\Cube.h" />
     <ClInclude Include="Src\Component\DataTemplate.h" />
     <ClInclude Include="Src\Component\EntityManager.h" />
+    <ClInclude Include="Src\Component\LightComp.h" />
     <ClInclude Include="Src\Component\ModelComp.h" />
     <ClInclude Include="Src\Component\TransformComp.h" />
     <ClInclude Include="Src\ConsoleWindow.h" />
