movement in progress

--- a/KanskeKul3DSpel/KanskeKul3DSpel.vcxproj
+++ b/KanskeKul3DSpel/KanskeKul3DSpel.vcxproj
@@ -156,6 +156,7 @@
     <ClCompile Include="Src\Component\EntityManager.cpp" />
     <ClCompile Include="Src\Component\LightComp.cpp" />
     <ClCompile Include="Src\Component\ModelComp.cpp" />
+    <ClCompile Include="Src\Component\MovementComp.cpp" />
     <ClCompile Include="Src\Component\TransformComp.cpp" />
     <ClCompile Include="Src\ConsoleWindow.cpp" />
     <ClCompile Include="Src\Game.cpp" />
@@ -169,6 +170,8 @@
     <ClInclude Include="Src\Component\Cube.h" />
     <ClInclude Include="Src\Component\DataTemplate.h" />
     <ClInclude Include="Src\Component\EntityManager.h" />
+    <ClInclude Include="Src\Component\MovementComp.h" />
+    <ClInclude Include="Src\Component\MovementInputComp.h" />
     <ClInclude Include="Src\Component\LightComp.h" />
     <ClInclude Include="Src\Component\ModelComp.h" />
     <ClInclude Include="Src\Component\TransformComp.h" />
