--- a/KanskeKul3DSpel/KanskeKul3DSpel.vcxproj.filters
+++ b/KanskeKul3DSpel/KanskeKul3DSpel.vcxproj.filters
@@ -113,9 +113,6 @@
     <ClInclude Include="Src\Renderer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Src\Component\Cube.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="Src\Component\LightComp.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -123,6 +120,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Src\Component\MovementComp.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\Component\System.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
