--- a/KanskeKul3DSpel/imgui.ini
+++ b/KanskeKul3DSpel/imgui.ini
@@ -9,7 +9,7 @@ Size=345,180
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=1444,74
+Pos=1034,154
 Size=550,680
 Collapsed=0
 
@@ -29,7 +29,17 @@ Size=554,459
 Collapsed=0
 
 [Window][Entity debugger]
-Pos=196,59
+Pos=52,113
 Size=474,645
+Collapsed=0
+
+[Window][Profiler]
+Pos=1305,116
+Size=229,56
+Collapsed=0
+
+[Window][Renderererererer debug]
+Pos=590,9
+Size=1054,1055
 Collapsed=0
 
