Deffered rendering worksi

--- a/KanskeKul3DSpel/KanskeKul3DSpel.vcxproj
+++ b/KanskeKul3DSpel/KanskeKul3DSpel.vcxproj
@@ -101,7 +101,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>F:\SPELTJOSAN\KanskeKul3DSpel\External\Include;C:\Program Files (x86)\Microsoft SDKs\Windows\v7.1A\Lib\x64;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>F:\SPELTJOSAN\KanskeKul3DSpel\External\Include;C:\Program Files (x86)\Microsoft SDKs\Windows\v7.1A\Lib\x64;$(ProjectDir)Src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
@@ -165,8 +165,9 @@
     <ClCompile Include="Src\Debug\Profiler.cpp" />
     <ClCompile Include="Src\Game.cpp" />
     <ClCompile Include="Src\Main.cpp" />
-    <ClCompile Include="Src\Renderer.cpp" />
-    <ClCompile Include="Src\Shader.cpp" />
+    <ClCompile Include="Src\Renderer\DefferedPass.cpp" />
+    <ClCompile Include="Src\Renderer\Renderer.cpp" />
+    <ClCompile Include="Src\Renderer\Shader.cpp" />
     <ClCompile Include="Src\ShadowMap.cpp" />
     <ClCompile Include="Src\UnorderedErase.h" />
   </ItemGroup>
@@ -186,14 +187,17 @@
     <ClInclude Include="Src\Debug\Profiler.h" />
     <ClInclude Include="Src\Game.h" />
     <ClInclude Include="Src\ImguiInit.h" />
-    <ClInclude Include="Src\Renderer.h" />
-    <ClInclude Include="Src\Shader.h" />
+    <ClInclude Include="Src\Renderer\DefferedPass.h" />
+    <ClInclude Include="Src\Renderer\Renderer.h" />
+    <ClInclude Include="Src\Renderer\Shader.h" />
     <ClInclude Include="Src\ShadowMap.h" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\Resources\Shaders\PS.glsl" />
+    <None Include="..\Resources\Shaders\PS_Deffered.glsl" />
+    <None Include="..\Resources\Shaders\PS_Geometry.glsl" />
     <None Include="..\Resources\Shaders\PS_Shadow.glsl" />
-    <None Include="..\Resources\Shaders\VS.glsl" />
+    <None Include="..\Resources\Shaders\VS_Deffered.glsl" />
+    <None Include="..\Resources\Shaders\VS_Geometry.glsl" />
     <None Include="..\Resources\Shaders\VS_Shadow.glsl" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
