--- a/KanskeKul3DSpel/KanskeKul3DSpel.vcxproj.filters
+++ b/KanskeKul3DSpel/KanskeKul3DSpel.vcxproj.filters
@@ -18,9 +18,6 @@
     <ClCompile Include="Src\Main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Src\Shader.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="Src\Camera.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -60,9 +57,6 @@
     <ClCompile Include="Src\Component\ModelComp.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Src\Renderer.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="Src\Component\LightComp.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -81,11 +75,17 @@
     <ClCompile Include="Src\ShadowMap.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Src\Renderer\Renderer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Src\Renderer\Shader.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Src\Renderer\DefferedPass.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Src\Shader.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="Src\Camera.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -108,9 +108,6 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Src\Component\DataTemplate.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Src\Renderer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Src\Component\LightComp.h">
@@ -137,11 +134,22 @@
     <ClInclude Include="Src\ShadowMap.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Src\Renderer\Renderer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\Renderer\Shader.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\Renderer\DefferedPass.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\Resources\Shaders\VS.glsl" />
-    <None Include="..\Resources\Shaders\PS.glsl" />
     <None Include="..\Resources\Shaders\VS_Shadow.glsl" />
     <None Include="..\Resources\Shaders\PS_Shadow.glsl" />
+    <None Include="..\Resources\Shaders\PS_Geometry.glsl" />
+    <None Include="..\Resources\Shaders\VS_Geometry.glsl" />
+    <None Include="..\Resources\Shaders\PS_Deffered.glsl" />
+    <None Include="..\Resources\Shaders\VS_Deffered.glsl" />
   </ItemGroup>
 </Project>
